--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+/********************************************************selector************************************************************/
 body {
   background-color: #FFECEF;
   margin :0;
@@ -30,25 +31,29 @@ h3 {
 a {
   font-size: 20PX;
   text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Oswald, Helvetica, sans-serif;
   color: #A10035;
   margin-left: 20px
 }
 
 p {
-  font-family: sans-serif;
+  font-family: Oswald, sans-serif;
   font-size: 14px;
   text-align: justify;
   color: #A10035;
-  margin-left: 40px
+  margin-left: 40px;
+  padding-top: 1%;
+  padding-bottom: 4%;
 }
 
 em {
-  font-size: 10PX;
+  font-size: 14PX;
   text-align: left;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Poiret One, Arial, Helvetica, sans-serif;
   color: #A10035;
-  margin-left: 20px
+  margin-left: 20px;
+  position: absolute;
+  left: 15%;
 }
 
 ul {
@@ -60,53 +65,187 @@ ul {
 }
 
 strong {
-  font-family: sans-serif;
+  font-family: Russo One,sans-serif;
   font-size: 18px;
   text-align: justify;
   color: #7C3E66;
-  margin-left: 20px
+  margin-left: 20px;
+  margin-top: 40px;
 }
 
 table {
-  font-family: sans-serif;
+  font-family: Poiret One, sans-serif;
   font-size: 20px;
-  text-align: justify;
+  border-spacing: 0;
   color: #A10035;
-  margin-left: 20px
+  margin-left: 3%;
+  margin-right: 3%;
+}
+/********************************************************class************************************************************/
+
+a:hover{background-color: #efd1b4ff}
+.icon {
+  width: 50px;
+  margin: 50px;
 }
 
+/*******************************index*****************************************/
 .banniere {
   width : 100%;
+}
+.link1 {
+  position: relative;
+
+  display: inline-block;
+  width: 100%;
+}
+.link2 {
+  position: relative;
+  display: inline-block;
+  width: 8%;
+  text-align: center;
+}
+.link0 {
+  margin-top: 5%;
+  margin-bottom: 5%;
+  margin-left:  40%;
+  display: inline-block;
 }
 .intro {
   margin-bottom: 10%;
   margin-top: 10%;
+  position: relative;
   text-align: justify;
 }
 
 
-a:hover{background-color: #efd1b4ff}
-
 .intro2 {
-  margin-bottom: 10%;
-  margin-top: 10%;
-  text-align: justify;
+  margin-bottom: 4%;
+  margin-top: 2%;
+  position: relative;
+  padding-top: 2%;
+ text-align: center;
 }
 .intro3 {
   margin-bottom: 10%;
   margin-top: 10%;
-  transform: translate(0%);
-  text-align: justify;
+ width: auto;
+
 }
 .imagerie {
   background-color: white;
   width: 100%;
   margin: 0;
 }
+.definition {
+  text-align: center;
+}
+
+/*******************************SKB*****************************************/
 .tablett {
-  width: 5%;
-  max-width: 15%;
+  display: inline-block;
+  width: 65%;
+  height: 65%;
+  border-style: inset;
+  border-color: #A10035;
 }
 .tablet {
   width: 25%;
+  margin-right: 3%;
+  position: relative;
+  right:6%;
+}
+
+
+
+.skb {
+  font-family: Oswald , sans-serif;
+}
+
+/*******************************monogatari*****************************************/
+.lignedutemps {
+  margin-top: 27%;
+  width: 69%;
+  margin-left: 21%;
+}
+.monosc {
+  font-family: Oswald, sans-serif;
+  font-size: 14px;
+  color: #A10035;
+
+}
+.legends {
+  position: absolute;
+  top: 80%;
+  left: 20%
+}
+.journalua {
+  position: absolute;
+  top: 80%;
+  right: 20%;
+}
+.downmono1 {
+  bottom: 40%;
+  left: 28%;
+  position: absolute;
+  display: inline-block;
+  transform: rotate(45deg);
+}
+.downmono2 {
+  bottom: 40%;
+  left: 48%;
+  position: absolute;
+  display: inline-block;
+  transform: rotate(45deg);
+}
+.downmono3{
+  bottom: 40%;
+  left: 74%;
+  position: absolute;
+  display: inline-block;
+  transform: rotate(45deg);
+}
+.upmono1 {
+  margin-top: 24%;
+  left: 20%;
+  position: absolute;
+  display: inline-block;
+  transform: rotate(45deg);
+}
+.upmono2 {
+  margin-top: 24%;
+  left: 35%;
+  position: absolute;
+  display: inline-block;
+  transform: rotate(45deg);
+}
+.upmono3{
+  margin-top: 24%;
+  left: 65%;
+  position: absolute;
+  display: inline-block;
+  transform: rotate(45deg);
+}
+.upmono4{
+  margin-top: 24%;
+  left: 80%;
+  position: absolute;
+  display: inline-block;
+  transform: rotate(45deg);
+}
+.titre {
+  position: absolute;
+  left:  38%;
+  top: 11%;
+  font-family: Oswald,sans-serif;
+  text-align: center;
+}
+.fond {
+  position: absolute;
+  width: 100%
+}
+.icon1 {
+  position: absolute;
+  width: 50px;
+  top: 80%;
 }
